// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectionStatus snapshots > connection states > should match snapshot - connected waiting for data 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _connecting_1c5a2c"
  />
</div>
`;

exports[`ConnectionStatus snapshots > connection states > should match snapshot - connected with data 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _connected_1c5a2c"
  />
</div>
`;

exports[`ConnectionStatus snapshots > connection states > should match snapshot - connecting 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _connecting_1c5a2c"
  />
</div>
`;

exports[`ConnectionStatus snapshots > connection states > should match snapshot - disconnected 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _disconnected_1c5a2c"
  />
</div>
`;

exports[`ConnectionStatus snapshots > connection states > should match snapshot - error 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _error_1c5a2c"
  />
</div>
`;

exports[`ConnectionStatus snapshots > connection states > should match snapshot - reconnecting 1`] = `
<div>
  <div
    class="_indicator_1c5a2c _reconnecting_1c5a2c"
  />
</div>
`;
